Closed Bug 715807 Opened 13 years ago Closed 13 years ago

crash CMbxScanner::CleanUp

Categories

(Thunderbird :: Migration, defect)

x86
Windows NT
defect
Not set
critical

Tracking

(thunderbird10 fixed, thunderbird11 fixed)

RESOLVED FIXED
Thunderbird 12.0
Tracking Status
thunderbird10 --- fixed
thunderbird11 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-bca944b5-968c-40eb-aa30-fc9482120104 .
============================================================= 
0 	xul.dll 	CMbxScanner::CleanUp 	mailnews/import/oexpress/nsOEMailbox.cpp:292
1 	xul.dll 	CMbxScanner::Initialize 	mailnews/import/oexpress/nsOEMailbox.cpp:247
2 	xul.dll 	CImportMailbox::ImportMailbox 	mailnews/import/oexpress/nsOEMailbox.cpp:158
3 	xul.dll 	ImportOEMailImpl::ImportMailbox 	mailnews/import/oexpress/nsOEImport.cpp:476
4 	xul.dll 	ImportMailThread 	mailnews/import/src/nsImportMail.cpp:908
5 	nspr4.dll 	_PR_NativeRunThread 	nsprpub/pr/src/threads/combined/pruthr.c:426
6 	nspr4.dll 	pr_root 	nsprpub/pr/src/md/windows/w95thred.c:122
7 	msvcr80.dll 	msvcr80.dll@0x29ba 	
8 	msvcr80.dll 	msvcr80.dll@0x2a46 	
9 	ntdll.dll 	__RtlUserThreadStart 	
10 	ntdll.dll 	_RtlUserThreadStart


When CMbxScanner::Initialize is failed, thunderbird will crash.  Because m_mbxFileInputStream or m_dstFileOutputStream may be null on CleanUp()
Attached patch fixSplinter Review
Assignee: nobody → m_kato
Attachment #587254 - Flags: review?(dbienvenu)
Comment on attachment 587254 [details] [diff] [review]
fix

Review of attachment 587254 [details] [diff] [review]:
-----------------------------------------------------------------

looks good, thx!
Attachment #587254 - Flags: review?(dbienvenu) → review+
I'm wondering if we want this for tb 10 and tb 11, since it looks safe, and the outlook import changes that perhaps caused this are in tb 10 and 11.
http://hg.mozilla.org/comm-central/rev/59b240e1e76c
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 12.0
Comment on attachment 587254 [details] [diff] [review]
fix

This crash occurs on 9.0.1.
Attachment #587254 - Flags: approval-comm-beta?
Attachment #587254 - Flags: approval-comm-aurora?
Attachment #587254 - Flags: approval-comm-beta?
Attachment #587254 - Flags: approval-comm-beta+
Attachment #587254 - Flags: approval-comm-aurora?
Attachment #587254 - Flags: approval-comm-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: