Bug 715807 - crash CMbxScanner::CleanUp. r=dbienvenu